--- a/src/base.css
+++ b/src/base.css
@@ -1,7 +1,10 @@
 body {
   max-width: 800px;
-  min-height: 100vh;
+  min-height: 500px;
   margin: auto;
   padding: 20px;
   border: 1px solid #FF00FF;
+  background-image: url("./background.jpg");
+  background-size: cover;
+  overflow: hidden;
 }
